complex rxjava scheduler

--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,10 @@ friends: [
         href: "http://www.trinea.cn/"
     },
     {
+        title: "Stay",
+        href: "http://notes.stay4it.com/"
+    },
+    {
         title: "安卓开发者官博",
         href: "http://android-developers.blogspot.com/"
     },
