--- a/_config.yml
+++ b/_config.yml
@@ -95,6 +95,10 @@ friends: [
         href: "http://notes.stay4it.com/"
     },
     {
+        title: "技术小黑屋",
+        href: "http://droidyue.com/"
+    },
+    {
         title: "安卓开发者官博",
         href: "http://android-developers.blogspot.com/"
     },
