--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ ga_domain: blog.piasy.com
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "NEVER STOP"
-sidebar-avatar: /img/piasy_avatar.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/we_chat_mp_qrcode.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
