--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Piasy
 SEOTitle: Piasy的博客 | Piasy Blog
 header-img: img/home-bg.jpg
 email: xz4215@gmail.com
-description: "NEVER STOP"
-keyword: "Piasy"
+description: "NEVER STOP | 这里是 Piasy 的个人博客"
+keyword: "许建林, Piasy许建林, Piasy, piasy, @piasy, Piasy的博客, Piasy Blog, 博客, 个人网站, 互联网, 安卓开发, 实时多媒体"
 url: "https://blog.piasy.com"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
